--- a/src/main/webapp/WEB-INF/static/css/myplugin.css
+++ b/src/main/webapp/WEB-INF/static/css/myplugin.css
@@ -25,10 +25,10 @@ div.dataTables_scrollBody {
     table-layout:fixed;
 }
 .ellipsis_otable tr th, .ellipsis_otable tr td{  
-    word-break:keep-all;/* 不换行 */
-    white-space:nowrap;/* 不换行 */
-    overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-    text-overflow:ellipsis;/* 当对象内文本溢出时显示省略标记(...) ；需与overflow:hidden;一起使用。*/
+    word-break:keep-all;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
 }
 .word_wrap_otable{
     table-layout:fixed;
@@ -129,4 +129,7 @@ ul.nav-noborder {
 ul.nav-noborder li a {
     padding: 4px 6px;
 }
-
+#ui-id-1{
+	z-index:99999;
+	margin-top:-5px;
+}
